# ozcding-school-15nd

./: .gitignore  README.md  level1.ipynb  level2.ipynb  main.py  main_2025_10_02_1.py  main_2025_10_02_2.py  main_2025_10_02_live.py
2025_11_19_faskApi_JWT/: main.py  pyproject.toml
2025_11_19_faskApi_JWT/app/models/: users.py
2025_11_19_faskApi_JWT/app/routers/: users.py
2025_11_19_faskApi_JWT/app/schemas/: users.py
2025_11_19_faskApi_JWT/app/services/: auth.py  jwt.py
2025_11_20_fastApi_blog/: .gitignore  FastAPI(1_5).html  FastAPI(2_5).html  FastAPI(3_5).html  FastAPI(4_5).html  docker-compose.yml  pyproject.toml
2025_11_20_fastApi_blog/FastAPI(1_5)_files/: 499229960464487  ClientFramework-14fe72276827d645.js.다운로드  app-8ae0e92e9846b7d1.js.다운로드  f(1).txt  f.txt  gtm.js.다운로드  js  js(1)  js(2)  localeSetup-ko-KR-d880d150897c88cd7abda5ab1f7609be.js.다운로드
2025_11_20_fastApi_blog/FastAPI(2_5)_files/: 12904-07ddb640a478280e.js.다운로드  22007-2e98b2fff5981c61.js.다운로드  ClientFramework-2b2df8117de017eb.js.다운로드  app-8dce94e9df0478c2.js.다운로드  f(1).txt  f.txt  gtm.js.다운로드  js  js(1)  localeSetup-ko-KR-435e597dbcaa505aaf1ebd26b733b2c6.js.다운로드
2025_11_20_fastApi_blog/FastAPI(3_5)_files/: ClientFramework-44b6428729b12b93.js.다운로드  f(1).txt  f.txt  js  js(1)
2025_11_20_fastApi_blog/FastAPI(4_5)_files/: aif-production.html  app-dfe90856e7033170.js.다운로드  js(2)  localeSetup-ko-KR-15b01a6e9f6436b73fa36b4ef68ec9a8.js.다운로드
2025_11_20_fastApi_blog/app/: dependencies.py  main.py
2025_12_17_django_blog/: db.sqlite3  pyproject.toml
2025_12_17_django_blog/blog/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
2025_12_17_django_blog/config/: settings.py  urls.py
2025_12_17_django_blog/member/: views.py
2025_12_17_django_blog/templates/: about.html  base.html  blog_detail.html  blog_form.html  blog_list.html  form-js.html  pagination.html  test_get.html  test_post.html
(+213 files in other folders)
