[project]
name = "2025-11-19-faskapi-jwt"
version = "0.1.0"
description = ""
authors = [
    {name = "devchoijih",email = "wlgns3855@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2,<0.122.0",
    "uvicorn>=0.38.0,<0.39.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black==24.10.0",
    "ruff==0.8.2",
    "mypy>=1.18.2,<2.0.0",
    "pytest==8.3.4",
    "coverage==7.6.9",
    "pyjwt>=2.10.1,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.1.0,<5.0.0",
    "tzdata>=2024.1",
]

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py313"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = 3.13
strict = true

[tool.coverage.run]
omit = ["*/test_*.py"]

