[project]
name = "2025-11-20-fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "greenlet>=3.2.4",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "python-jose>=3.5.0",
    "ruff>=0.14.5",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
